Update blog pages

--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,6 +1,25 @@
 h1 {
 	width: 40%;
 	margin-left: auto;
+	margin-right: 17.5%;
+	background-color: #988F48;
+	font-family: ;
+	text-align: center;
+	border: groove #22AE67;
+}
+
+h4 {
+	width: 20%;
+	margin-left: auto;
+	margin-right: 27.5%;
+	background-color: #988F48;
+	text-align: center;
+	border: groove #22AE67;
+}
+
+h5 {
+	width: 100%;
+	margin-left: auto;
 	margin-right: auto;
 	background-color: #988F48;
 	text-align: center;
@@ -12,7 +31,7 @@ html {
 }
 
 body {
-	height: 100%;
+
 }
 
 #blog {
@@ -21,45 +40,30 @@ body {
 }
 
 #post {
-	float: left;
-	width: 30%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 5em;
-	text-align: center;
+	float: right;
+	width: 75%;
+	text-align: left;
 	position: relative;
+	margin-bottom: 50px;
 }
 
 nav {
-	width: 30%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 5em;
-	text-align: center;
-	position: relative;
-}
-
-section {
-	float: right;
-	width: 65%;
+	width: 20%;
+	margin-bottom: 50px;
+	float: left;
 	text-align: left;
 	position: relative;
 }
 
-#left {
-	left: 0;
-	height: 50%;
-}
-
 footer {
-    height: 50px;
-    position: absolute;
-    clear: both;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #988F48;
-    text-align: center;
+	border: groove #22AE67;
+  height: 50px;
+  display: inline-block;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #988F48;
+  position: fixed;
 }
 
 a:link {
@@ -67,12 +71,13 @@ a:link {
 }
 
 a:visited {
-	color: #FF7353
+	color: #FF7353;
 }
 
 a {
-	float: left;
-	clear: left;
+	clear: none;
+	margin-left: 1em;
+	display: inline-block;
 }
 
 .navs {
@@ -83,7 +88,7 @@ a {
 ul {
 	list-style-type: none;
 	margin: 0;
-	padding: 0 	;
+	padding: 0;
 }
 
 img.displayed {
