--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,7 +1,7 @@
 h1 {
 	width: 40%;
 	margin-left: auto;
-	margin-right: 17.5%;
+	margin-right: auto;
 	background-color: #988F48;
 	font-family: ;
 	text-align: center;
@@ -11,7 +11,7 @@ h1 {
 h4 {
 	width: 20%;
 	margin-left: auto;
-	margin-right: 27.5%;
+	margin-right: auto;
 	background-color: #988F48;
 	text-align: center;
 	border: groove #22AE67;
@@ -31,7 +31,14 @@ html {
 }
 
 body {
+	border: none;
+}
 
+section {
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 50px;
 }
 
 #blog {
@@ -40,19 +47,20 @@ body {
 }
 
 #post {
+	position: relative;
 	float: right;
 	width: 75%;
-	text-align: left;
-	position: relative;
+	margin-right: 2em;
 	margin-bottom: 50px;
+	text-align: left;
 }
 
 nav {
+	position: relative;
+	float: left;
 	width: 20%;
 	margin-bottom: 50px;
-	float: left;
 	text-align: left;
-	position: relative;
 }
 
 footer {
@@ -78,6 +86,11 @@ a {
 	clear: none;
 	margin-left: 1em;
 	display: inline-block;
+}
+
+#main-list {
+	clear: both;
+	display: block;
 }
 
 .navs {
