--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -16,10 +16,12 @@ h4 {
 
 h5 {
 	width: 100%;
+	background-image: url(../imgs/h1-background.png);
+	border-radius: 1em;
+	text-align: center;
+	box-shadow: 5px 5px .5em grey;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: #988F48;
-	text-align: center;
 }
 
 html {
@@ -42,13 +44,24 @@ section {
 	margin-bottom: 2em;
 }
 
+#blog-list {
+	margin-top: 2em;
+	margin-right: auto;
+}
+
 #post {
-	position: relative;
+	background-color: #936AE8;
 	float: right;
-	width: 75%;
+	width: 73%;
+	padding: .5em;
+	border: .2em inset #936AE8;
+	border-radius: .5em;
+	margin-top: 1.5em;
 	margin-right: 2em;
-	margin-bottom: 50px;
+	margin-bottom: 2em;
 	text-align: left;
+	box-shadow: 5px 5px .5em grey;
+	position: relative;
 }
 
 nav {
