--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -8,7 +8,8 @@ nav {
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
-	width: 60%;
+	max-width: 60%;
+	display: block;
 }
 
 footer {
@@ -86,14 +87,20 @@ a:visited {
 }
 
 .bot-link {
-	margin-right: 1em;
+	margin-right: 1.5em;
 }
 /*Images*/
+img {
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;
+}
+
 img.displayed {
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
-	height: 50%;
 }
 
 #big-img {
